change font to monospace

--- a/klb-frontend/src/app.postcss
+++ b/klb-frontend/src/app.postcss
@@ -7,3 +7,7 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+:root [data-theme='skeleton'] {
+	--theme-font-family-base: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+}
